--- a/templates/login.html
+++ b/templates/login.html
@@ -11,10 +11,13 @@
     &nbsp;&nbsp;
     {{ form.password.label }}: {{ form.password }}
     &nbsp;&nbsp;
-    <input type = "submit" value = "Submit">
+    <input type="submit" value="Submit">
   </p>
 </form>
+
 <br>
-<p><em>Need an account?</em><a href="register">Signup!!</a></p>
+
+<p><em>Need an account? </em><a href="/register">Signup!!</a></p>
+
 
 {% endblock %}
